Added basic CSS and font

--- a/first-weather-app/index.html
+++ b/first-weather-app/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -20,12 +26,20 @@
         </form>
       </header>
       <main>
-        <h1>Paris</h1>
-        <p>
-          Saturday 0:13, clear sky <br />
-          Humidity:<strong>65%</strong>,Wind: <strong>3.09km/h</strong>
-        </p>
-        ⛅20°C
+        <div class="current-temperature">
+          <div>
+            <h1 class="weather-city">Paris</h1>
+            <p class="weather-details">
+              Saturday 0:13, clear sky <br />
+              Humidity:<strong>65%</strong>,Wind: <strong>3.09km/h</strong>
+            </p>
+          </div>
+          <div class="weather-temperature-container">
+            <div class="weather-icon">⛅</div>
+            <div class="weather-temperature">20</div>
+            <div class="weather-unit">°C</div>
+          </div>
+        </div>
       </main>
       <footer>
         This project was coded by
