Added footer links

--- a/first-weather-app/index.html
+++ b/first-weather-app/index.html
@@ -46,9 +46,16 @@
       </main>
       <footer>
         This project was coded by
-        <a href="#"> Sinomhlobo Lutya</a>, is
-        <a href="#"> open-sourced on GitHub</a> and
-        <a href="#"> on Netlify</a>
+        <a href="https://github.com/Sino-Lut" target="_blank">
+          Sinomhlobo Lutya</a
+        >, is
+        <a href="https://github.com/Sino-Lut/weather-app-first" target="_blank">
+          open-sourced on GitHub</a
+        >
+        and
+        <a href="https://cute-kangaroo-4af81b.netlify.app/" target="_blank">
+          on Netlify</a
+        >
       </footer>
     </div>
     <script src="src/index.js"></script>
